[tool.poetry]
name = "infrahub-sync"
version = "0.2.2"
description = ""
authors = ["OpsMill <contact@opsmill.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://opsmill.io"
repository = "https://opsmill.io"
documentation = "https://opsmill.io"
packages = [
    { include = "infrahub_sync", from = "infrahub-sync"},
    { include = "potenda", from = "potenda"},
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
infrahub-sdk = ">=0.7"
structlog = "^22.3.0"
diffsync = "^1.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-httpx = "*"
yamllint = "*"
pylint = "*"
mypy = "*"
ipython = "*"
pytest-asyncio = "*"
requests = "*"
pre-commit = "^2.20.0"
autoflake = "*"
types-toml = "*"
types-ujson = "*"
types-pyyaml = "*"
typer-cli = "*"
ruff = "^0.1.8"
pytest-xdist = "^3.3.1"
types-python-slugify = "^8.0.0.3"

[tool.poetry.scripts]
infrahub-sync = "infrahub_sync.cli:app"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError()"
]

[tool.pylint.general]
extension-pkg-whitelist = [
    "pydantic",
    "ujson",
]

[tool.pylint.format]
disable = "logging-fstring-interpolation"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions.
no-docstring-rgx="^(_|test_)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
# assigning-non-slot,no-member,unsupported-membership-test,unsubscriptable-object,unsupported-assignment-operation,not-an-iterable
# are disabled because of our move to pydantic 2, pylint does not seem to respect the type hint for pydantic 2 model fields.
disable = """,
    line-too-long,
    missing-module-docstring,
    missing-function-docstring,
    missing-class-docstring,
    consider-using-from-import,
    invalid-name,
    too-many-arguments,
    too-many-locals,
    keyword-arg-before-vararg,
    too-few-public-methods,
    too-many-instance-attributes,
    fixme,
    consider-using-f-string,
    protected-access,
    import-self,
    wrong-import-order,
    assigning-non-slot,
    no-member,
    unsupported-membership-test,
    unsubscriptable-object,
    unsupported-assignment-operation,
    not-an-iterable,
    multiple-statements,
    """

[tool.pylint.miscellaneous]
notes = """,
    FIXME,
    XXX,
    """

[tool.pylint.similarities]
min-similarity-lines = 20

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore:Module already imported so cannot be rewritten",
    "ignore:the imp module is deprecated",
    "ignore:Deprecated call to",
]
addopts = "-vs --cov-report term-missing --cov-report xml --dist loadscope"

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 120

exclude = [
        ".git",
        ".tox",
        ".venv",
        "env",
        "_build",
        "build",
        "dist",
        "examples",
]


[tool.ruff.lint]
preview = true

task-tags = [
    "FIXME",
    "TODO",
    "XXX",
]

select = [
   "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "DJ",    # flake8-django
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "I",     # isort-like checks
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "TCH",   # flake8-type-checking
    "TRIO",  # flake8-trio
    "T10",   # flake8-debugger
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]

ignore = [

##################################################################################################
# The ignored rules below should be removed once the code has been updated, they are included    #
# like this so that we can reactivate them one by one. Alternatively ignored after further       #
# investigation if they are deemed to not make sense.                                            #
##################################################################################################
    "B904",    # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "C416",    # Unnecessary `list` comprehension (rewrite using `list()`)
    "INP001",  # File is part of an implicit namespace package. Add an `__init__.py`.
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments in function definition
    "PLR0917", # Too many positional arguments
    "PLR1702", # Too many nested blocks
    "PLR6301", # Method could be a function, class method, or static method
    "RET504",  # Unnecessary assignment to `ptd` before `return` statement
]

#https://docs.astral.sh/ruff/formatter/black/
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["diffsync", "infrahub_sync", "potenda"]

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.mccabe]
# Target max-complexity=10
max-complexity = 17

[tool.ruff.lint.per-file-ignores]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
